<resources>
    <string name="app_name">iConsume</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">消费记录</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="menu_exit">退出</string>
    <string name="update_version">检查更新</string>
    
	<string name="prompt_ts">提示</string>
	<string name="err_server">连接服务器失败!</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="exit">退出</string>
	<string name="server_conn_error">网络连接失败,请检查您的网络设置</string>
	<string name="update_apk">有最新版本，请更新</string>
	<string name="dowload">下载</string>
	<string name="success">下载完成</string>
	<string name="error">下载失败</string>
	<string name="ok_exit">确认退出吗?</string>
	<string name="ok_version">已经是最新版本,无需更新</string>

	
    <string name="please_update">请升级</string>
    <string name="package_name">us.solife.consumes</string>
    <string name="gridchart">GridChart</string>
    <string name="machart">MAChart</string>
    <string name="stickchart">StickChart</string>
    <string name="mastickchart">MAStickChart</string>
    <string name="minusstickchart">MinusStickChart</string>
    <string name="candlestickchart">CandleStickChart</string>
    <string name="macandlestickchart">MACandleStickChart</string>
    <string name="piechart">PieChart</string>
    <string name="piechart_title1">title1</string>
    <string name="piechart_title2">title2</string>
    <string name="piechart_title3">title3</string>
    <string name="piechart_title4">title4</string>
    <string name="piechart_title5">title5</string>
    <string name="spiderwebchart">SpiderWebChart</string>
    <string name="spiderwebchart_title1">title1</string>
    <string name="spiderwebchart_title2">title2</string>
    <string name="spiderwebchart_title3">title3</string>
    <string name="spiderwebchart_title4">title4</string>
    <string name="spiderwebchart_title5">title5</string>
</resources>