<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/main_header" />
                    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gridchart" />

        <us.solife.androidcharts.view.GridChart
            android:id="@+id/gridchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/machart" />

        <us.solife.androidcharts.view.LineChart
            android:id="@+id/machart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stickchart" />

        <us.solife.androidcharts.view.StickChart
            android:id="@+id/stickchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mastickchart" />

        <us.solife.androidcharts.view.MAStickChart
            android:id="@+id/mastickchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/minusstickchart" />

        <us.solife.androidcharts.view.MinusStickChart
            android:id="@+id/minusstickchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/candlestickchart" />

        <us.solife.androidcharts.view.CandleStickChart
            android:id="@+id/candlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/macandlestickchart" />

        <us.solife.androidcharts.view.MACandleStickChart
            android:id="@+id/macandlestickchart"
            android:layout_width="fill_parent"
            android:layout_height="160dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/piechart" />

        <us.solife.androidcharts.view.PieChart
            android:id="@+id/piechart"
            android:layout_width="fill_parent"
            android:layout_height="200dip" />


    </LinearLayout>

</ScrollView>